--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "example": "examples"
   },
   "scripts": {
-    "build": "babel ./src --out-dir ./dist --copy-files",
+    "build": "babel ./src --out-dir ./dist --copy-files && cp -R ./typescript/* ./dist",
     "clean": "rm -rf ./dist",
     "lint": "eslint ./src",
     "prepare": "npm run build"
